2007-07-21  Hector E. Gomez Morales  <hectorgm@gmail.com>

	* Monodoc.Editor/EditorWindow.cs,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic: Basic copy Action handler
	  method.

2007-07-17  Hector E. Gomez M. <hectoregm@gmail.com> 

	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Changed
	  Padding to 0 in EditorWindow

2007-07-17  Hector E. Gomez M. <hectoregm@gmail.com> 

	* EditorWindow.cs: Editing prototype code.

2007-07-09  Hector E. Gomez M. <hectoregm@gmail.com> 

	* EditorWindow.cs, Monodoc.Editor.mdp, AboutEditorDialog.cs,
	  gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Added a
	  AboutDialog to the application.

2007-07-05  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EditorWindow.cs: Added a check in Open event to see if filename is
	  empty before we do anything.

2007-07-01  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EditorWindow.cs: Rearrange OnOpenActivated handler to prevent GUI
	  freezing.
	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Set Save
	  and SaveAs Actions to be insensitive at start of editor.

2007-07-01  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EditorWindow.cs: Minor changes.
	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Changed
	  named from statusbar1 to status_bar and added a ProgressBar named
	  progress_bar

2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* gtk-gui/Monodoc.Editor.SaveDocDialog.cs,
	  gtk-gui/Monodoc.Editor.OpenDocDialog.cs, gtk-gui/gui.stetic: Minor
	  changes to Save and Open dialogs

2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Minor
	  change moved Quit menu.

2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EditorWindow.cs, gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  gtk-gui/gui.stetic: Added a notebook to get "tab" functionality in